            NOTE: Please refer to the migration notes!
    * 0116 FIX: cisco_vpn_tunnel: Fixed typo who leads to an exception
    * 0118 FIX: stulz_humidity: Fixed coloring in pnp template...
    * 0119 FIX: stulz_humidity: Fixed lower thresholds...

    Multisite:
    * 0117 FIX: Availability button is now visible for users without the right to edit views


1.2.4b4:
    Core & Setup:
    * 0401 FIX: Fix rule precedence in WATO-configured manual checks...
    * 0402 FIX: Fix exception in case of missing agent sections of cluster-aware checks...
    * 0426 FIX: Fixed processing of cached agent plugins / local scripts...

    Checks & Agents:
    * 0254 agent_vsphere: Make handling of spaces in hostnames of ESX configurable...
    * 0251 FIX: agent_vsphere / check_mk agent: fixed outdated systemtime of check_mk agent...
    * 0439 FIX: postfix_mailq: Linux agent better detects Postfix installation...
    * 0440 FIX: heartbeat_crm: Inventory more gracefully handles case where agent output is invalid...
    * 0113 FIX: blade_blades: Now only make inventory for blades that are powered on...
    * 0441 FIX: megaraid_bbu: Fix several false alarms and cases where inventory failed
    * 0442 FIX: dell_om_disks: Treat global host spare disks as OK, instead of WARN...
    * 0443 FIX: brocade_fcport: cope with firmware that does not provide speed information...
    * 0322 FIX: timemachine: Check now also works if there are spaces in the name of the backup volume or the hostname
    * 0403 FIX: mem.used: Prefer statgrab on FreeBSD for supporting more than 4GB...
    * 0404 FIX: cups_queues: fix exception in case of alternative time format...
    * 0444 FIX: timemachine: do not inventorize check when timemachine is not used

    Multisite:
    * 0425 FIX: Fix login loop bug in distributed environments with different auth secrets

    WATO:
    * 0428 Changed user profiles (e.g. pw changes) are now replicated in distributed setups...