@@ -5,6 +5,7 @@
     * 0116 FIX: cisco_vpn_tunnel: Fixed typo who leads to an exception
     * 0118 FIX: stulz_humidity: Fixed coloring in pnp template...
     * 0119 FIX: stulz_humidity: Fixed lower thresholds...
+    * 0255 FIX: windows_agent: now able to handle the removal of local/plugin scripts during runtime...
 
     Multisite:
     * 0117 FIX: Availability button is now visible for users without the right to edit views
